fixed width bug on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,16 @@ body {
   flex-wrap: wrap;
   text-align: center;
   width: 100%;
-  overflow-x: hidden;
+  background-color: #fbfbfe;
 }
 
 .page {
   scroll-snap-align: start;
   height: 100vh;
   width: 100vw;
+}
+
+@media only screen and (max-width: 800px) {
+  .App {
+  }
 }
